docs(D-BASELINE): deixa as 3 camadas do Java explicitas em todo lugar
Pedido da mantenedora ('deixa isso claro nas docs'). README EN/PT +
learn/31-distribution EN/PT + learn/01-installation EN/PT + learn/README
EN/PT + docs/status.md + CHANGELOG EN/PT:

- Compilar o repo / rodar o CLI = JDK 25 (toolchain; os fontes usam
  unnamed pattern _ = JEP 443, o javac 21 NAO compila o repo).
- Programa Kof compilado = roda em JVM 21+ (VmBackend emite V21,
  Android alvo release 21, KofVersion.TOOLING_API=21 — congelado,
  regra 6). TOOLING_API re-rotulado no texto como 'API do programa
  emitido' (ele sempre significou o piso do bytecode, nao da toolchain
  — a frase antiga 'Tooling API baseline' e que gerava a confusao).
- package.sh --jdk / kof info do empacotado: Temurin 25.
- D-BASELINE espelhada no DECISIONS.pt_BR (par EN/PT travado; guard
  docs-lang.sh check: 0 sem par).
Prova: docs-lang check verde; nenhum codigo tocado (docs-only).